k8s-rpi-apps-ingresses/mikrotik-external-ingress/mikrotik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mikrotik-ingress
  namespace: external-services
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`<mikrotikhostname>.<domainname>`)
    kind: Rule
    services:
    - name: mikrotik
      port: 443
      scheme: https
    middlewares:
      - name: mikrot-cors-header
        namespace: external-services
